--- a/nba-quiz/src/App.css
+++ b/nba-quiz/src/App.css
@@ -2,23 +2,19 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.quiz {
+  margin: 2%;
+  padding: 2%;
+  width: 90%;
+  height: 20%;
+  position: relative;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.question {
+  font-size: 2rem;
+  text-align: center;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.player-image {
+  text-align: center;
 }
