--- a/nba-quiz/src/App.css
+++ b/nba-quiz/src/App.css
@@ -18,3 +18,33 @@
 .player-image {
   text-align: center;
 }
+
+.options {
+  margin: 5%;
+  display: flex;
+  margin-right: -12px;
+  margin-left: -12px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+  flex: 1 0 auto;
+}
+
+.fields {
+  display: flex;
+  padding: 12px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex: 1;
+  border: 1px solid black;
+}
+
+.fields:hover {
+  background-color: black;
+  color: white;
+}
+
+.field-block {
+  text-align: center;
+}
